--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scroll</title>
+    <link rel="shortcut icon" href="./logo.svg" type="image/x-icon">
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -13,7 +14,96 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>scroll project</h1>
+
+        <!-- header -->
+        <header id="home">
+          <!-- navbar -->
+          <nav id="nav">
+            <div class="nav-center">
+              <!-- nav header -->
+              <div class="nav-header">
+                <img class="logo" src="./logo.svg" alt="logo">
+                <button class="nav-toggle">
+                  <i class="fas fa-bars"></i>
+                </button>
+              </div>
+
+              <!-- links container -->
+              <div class="links-container">
+                  <ul class="links">
+                    <li>
+                      <a href="#home" class="scroll-link">home</a>
+                    </li>
+                    <li>
+                      <a href="#about" class="scroll-link">about</a>
+                    </li>
+                    <li>
+                      <a href="#services" class="scroll-link">services</a>
+                    </li>
+                    <li>
+                      <a href="#tours" class="scroll-link">tours</a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+          </nav>
+
+          <!-- banner -->
+            <div class="banner">
+              <div class="container">
+                <h1>Scroll Project</h1>
+                 <p>Lorem ipsum dolor sit amet consectetur 
+                   adipisicing elit. Voluptatem reiciendis aspernatur
+                   alias dolorem ipsa consequatur tempore animi 
+                   maxime sint molestias? Explicabo dolorum totam corrupti
+                   porro? Aspernatur consequuntur eius pariatur exercitationem.</p>
+                  
+                   <a href="#tours" class="scroll-link btn btn-white">
+                     Explore Tours
+                   </a>
+              </div>
+            </div>          
+        </header>
+
+        <!-- about -->
+        <section id="about" class="section">
+          <div class="title">
+            <h2>About <span>us</span></h2>
+          </div>
+        </section>
+
+        <!-- services -->
+        <section id="services" class="section">
+          <div class="title">
+            <h2>Our<span>services</span></h2>
+          </div>
+        </section>
+
+        <!-- tours -->
+        <section id="tours" class="section">
+          <div class="title">
+            <h2>Featured <span>tours</span></h2>
+          </div>
+        </section>
+
+        <!-- footer -->
+        <footer class="section">
+          <p>Copyright &copy; backroads travel tours company
+            <span class="date">
+              2020
+            </span>
+            .All rights reserved
+          </p>
+        </footer>
+
+        <!-- back to top button -->
+        <a href="#home" class="scroll-link top-link">
+          <i class="fas fa-arrow-up"></i>
+        </a>
+
+
+
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
