--- a/10-scroll/setup/index.html
+++ b/10-scroll/setup/index.html
@@ -89,16 +89,14 @@
         <!-- footer -->
         <footer class="section">
           <p>Copyright &copy; backroads travel tours company
-            <span class="date">
-              2020
-            </span>
+            <span id="date">2021</span>
             .All rights reserved
           </p>
         </footer>
 
         <!-- back to top button -->
         <a href="#home" class="scroll-link top-link">
-          <i class="fas fa-arrow-up"></i>
+          <i class="fas fa-arrow-up"> </i>
         </a>
 
 
