--- a/16-ES6-slider/setup/index.html
+++ b/16-ES6-slider/setup/index.html
@@ -14,7 +14,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h2>slider project</h2>
+    
+    <div class="slide-container">
+      <div class="slide">
+        <img src="./" alt="">
+      </div>
+    </div>
+
+
+
+
+
+
     <script type="module" src="app.js"></script>
   </body>
 </html>
