--- a/14-grocery-bud/setup/index.html
+++ b/14-grocery-bud/setup/index.html
@@ -21,8 +21,25 @@
          <h3>Grocery bud</h3>
          <div class="form-control">
            <input type="text" placeholder="eg:Cake" id="grocery">
+           <button type="submit" class="submit-btn">Submit</button>
          </div>
       </form>
+
+      <!-- list -->
+      <div class="grocery-container">
+        <div class="grocery-list">
+          <article class="grocery-item">
+            <p  class="title">item</p>
+            <div class="btn-container">
+              <button type="button" class="edit-btn"><i class="fas fa-edit"></i></button>
+              <button type="button" class="delete-btn"><i class="fas fa-trash"></i></button>
+            </div>
+          </article>
+        </div>
+        <!-- clear button -->
+        <button type="button" class="clear-btn">Clear Items</button>
+      </div>
+
     </section>
     
     
